<?xml version="1.0"?>
<package format="2">
  <name>darknet_ros_3d</name>
  <version>0.0.0</version>
  <description>
    The darknet_ros_3d package.
    This package is composed by only one node whose job is to sunscribe
    to Darknet ROS bounding boxes and to depth camera information.
    Then, it publicates in topic "/darknet_ros3d/bounding_boxes" 3d bounding boxes
    adding the distances are they

  </description>

  <maintainer email="fergonzaramos@yahoo.es">Fernando González</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>darknet_ros_msgs</build_depend>
  <build_depend>gb_visual_detection_3d_msgs</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>roslint</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>darknet_ros_msgs</build_export_depend>
  <build_export_depend>tf2_geometry_msgs</build_export_depend>
  <build_export_depend>gb_visual_detection_3d_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>tf2_ros</build_export_depend>
  <build_export_depend>pcl_ros</build_export_depend>
  <build_export_depend>pcl_conversions</build_export_depend>
  <build_export_depend>roslint</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>darknet_ros_msgs</exec_depend>
  <exec_depend>gb_visual_detection_3d_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>roslint</exec_depend>


  <export>
  </export>
</package>
