<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>darknet_ros_3d</name>
  <version>1.0.0</version>
  <description>darknet_ros_3d package: Package for 3D objects detection using rgbd camera</description>
  <maintainer email="fergonzaramos@yahoo.es">Fernando Gonzalez</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>rclcpp_lifecycle</build_depend>
  <buildtool_depend>eigen3_cmake_module</buildtool_depend>

  <build_depend>lifecycle_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>darknet_ros_msgs</build_depend>
  <build_depend>gb_visual_detection_3d_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_sensor_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>eigen</build_depend>

  <exec_depend>lifecycle_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>darknet_ros_msgs</exec_depend>
  <exec_depend>gb_visual_detection_3d_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_sensor_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
